@@ -1,3 +1,8 @@
+2014-07-19  Akira Kakuto  <kakuto@fuk.kinidai.ac.jp>
+
+	* texmfmp.c: Use getnullstr() in maketexstring(), as in pdfTeX,
+	in most cases in order to avoid an assertion error.
+
 2014-07-15  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
 	* texmfmp.c: Replace the deprecated spawnvp() by _spawnvp(),
